handle missing entities on propagation state restore & refactoring